--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       </svg>
       Cutspace
     </h1>
-    <img src="assets/images/intro-01.jpg" srcset="assets/images/intro-01@2x.jpg 2x" />
+    <img src="assets/images/content/intro.jpg" srcset="assets/images/content/intro@2x.jpg 2x" />
   </body>
 </html>
