--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cutspace</title>
     <link rel="stylesheet" href="styles/css/index.css" />
   </head>
   <body>
@@ -14,6 +14,7 @@
       </svg>
       Cutspace
     </h1>
-    <img src="assets/images/content/intro.jpg" srcset="assets/images/content/intro@2x.jpg 2x" />
+    <input type="text" />
+    <button>hello</button>
   </body>
 </html>
