Добавлен блок интро, без формы

--- a/index.html
+++ b/index.html
@@ -30,5 +30,29 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="intro">
+        <div class="intro__container">
+          <div class="intro__body">
+            <div class="intro__content">
+              <h1 class="intro__title">Find your custom matched commercial real estate space.</h1>
+              <p class="intro__subtitle">
+                In oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat, quo pertineant ero tibique
+              </p>
+              <div class="intro__form">form</div>
+            </div>
+
+            <figure class="intro__picture">
+              <img
+                src="./assets/images/content/intro.jpg"
+                srcset="./assets/images/content/intro@2x.jpg 2x"
+                alt="Intro image"
+                class="intro__image"
+              />
+            </figure>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
