--- a/index.html
+++ b/index.html
@@ -70,6 +70,32 @@
           </div>
         </div>
       </section>
+      <section class="partners">
+        <div class="partners__container">
+          <ul class="partners__list">
+            <li>
+              <svg width="217px" height="42px">
+                <use href="./assets/icons.svg#partner_1" />
+              </svg>
+            </li>
+            <li>
+              <svg width="190px" height="34px">
+                <use href="./assets/icons.svg#partner_2" />
+              </svg>
+            </li>
+            <li>
+              <svg width="230px" height="42px">
+                <use href="./assets/icons.svg#partner_3" />
+              </svg>
+            </li>
+            <li>
+              <svg width="188px" height="38px">
+                <use href="./assets/icons.svg#partner_4" />
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <script src="./index.js"></script>
   </body>
