Обновлена архитекура папок и файлов в sass
Папки и файлы организованы в соответствии с "шаблоном 7-1"
container и button вынесены в отдельные компоненты

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cutspace</title>
-    <link rel="stylesheet" href="styles/css/index.css" />
+    <link rel="stylesheet" href="styles/css/main.css" />
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
+      <div class="container">
         <div class="header__body">
           <div class="header__logo">
             <svg width="30px" height="30px">
@@ -32,7 +32,7 @@
     </header>
     <main>
       <section class="intro">
-        <div class="intro__container">
+        <div class="container">
           <div class="intro__body">
             <div class="intro__content">
               <h1 class="intro__title">Find your custom matched commercial real estate space.</h1>
@@ -54,7 +54,7 @@
                     placeholder="Your email address"
                     class="intro-form__input"
                   />
-                  <button type="submit" class="intro-form__button">Subscribe</button>
+                  <button type="submit" class="button button--accented intro-form__button">Subscribe</button>
                 </label>
               </form>
             </div>
@@ -71,7 +71,7 @@
         </div>
       </section>
       <section class="partners">
-        <div class="partners__container">
+        <div class="container">
           <ul class="partners__list">
             <li>
               <svg width="217px" height="42px">
