Вынесены во внешнюю геометрию отсупы м-у секциями

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
       </div>
     </header>
-    <main>
-      <section class="intro">
+    <main class="page">
+      <section class="intro page__intro">
         <div class="container">
           <div class="intro__body">
             <div class="intro__content">
@@ -70,7 +70,7 @@
           </div>
         </div>
       </section>
-      <section class="partners">
+      <section class="partners page__partners">
         <div class="container">
           <ul class="partners__list">
             <li>
