--- a/index.html
+++ b/index.html
@@ -96,6 +96,71 @@
           </ul>
         </div>
       </section>
+      <section class="provide page__provide">
+        <div class="container">
+          <div class="provide__body">
+            <div class="provide__gallery">
+              <div class="provide__card">
+                <figure class="provide__picture">
+                  <img
+                    src="./assets/images/content/provide-01.jpg"
+                    srcset="./assets/images/content/provide-01@2x.jpg 2x"
+                    alt="Provide picture"
+                    class="provide__image"
+                  />
+                </figure>
+                <div class="provide__hint">
+                  <div class="provide-hint">
+                    <div class="provide-hint__icon">
+                      <svg width="16px" height="23px">
+                        <use href="./assets/icons.svg#building" />
+                      </svg>
+                    </div>
+
+                    <div class="provide-hint__content">
+                      <h6 class="provide-hint__title">Lorem, ipsum.</h6>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="provide__card">
+                <figure class="provide__picture provide__picture--sharp">
+                  <img
+                    src="./assets/images/content/provide-02.jpg"
+                    srcset="./assets/images/content/provide-02@2x.jpg 2x"
+                    alt="Provide picture"
+                    class="provide__image"
+                  />
+                </figure>
+                <div class="provide__hint">
+                  <div class="provide-hint">
+                    <div class="provide-hint__icon">
+                      <svg width="16px" height="23px">
+                        <use href="./assets/icons.svg#building" />
+                      </svg>
+                    </div>
+
+                    <div class="provide-hint__content">
+                      <h6 class="provide-hint__title">Twelve West Lake</h6>
+                      <p>Space for up to 150 people</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="provide__content">
+              <h2 class="provide__title">We provide best space for you!</h2>
+              <p>
+                Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex ea quid est et via procedat oratio
+                quaerimus.
+              </p>
+              <p>quid aut ad id omnia referri oporteat, ipsum autem nusquam hoc epicurus in ea commodi consequatur?</p>
+              <a href="#" class="button button--accented provide__button">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./index.js"></script>
   </body>
