--- a/index.html
+++ b/index.html
@@ -161,6 +161,33 @@
           </div>
         </div>
       </section>
+      <section class="using page__using">
+        <div class="container">
+          <div class="using__body">
+            <figure class="using__picture">
+              <img
+                src="./assets/images/content/using.jpg"
+                srcset="./assets/images/content/using@2x.jpg 2x"
+                alt="Using image"
+              />
+            </figure>
+            <div class="using__content">
+              <h2 class="using__title">Start using our product</h2>
+              <p>Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p>
+
+              <div class="using__action">
+                <a href="#" class="button button--accented">Contact Us</a>
+                <button class="button using__play-button">
+                  <svg width="12px" height="12px" class="using__play-icon">
+                    <use href="./assets/icons.svg#play" />
+                  </svg>
+                  <span>Watch now</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./index.js"></script>
   </body>
