Исправлена верстка в форме обратной связи
На 1 label должен быть 1 форм-контрол.
Button вынесен из label, т.к. label связан с input.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
                     placeholder="Your email address"
                     class="intro-form__input"
                   />
-                  <!-- @TODO: исправить: вынести button из label, получилось что один label на 2 форм-элемента -->
-                  <button type="submit" class="button button--accented intro-form__button">Subscribe</button>
                 </label>
+                <button type="submit" class="button button--accented">Subscribe</button>
               </form>
             </div>
 
