Добавлен блок choose

--- a/index.html
+++ b/index.html
@@ -218,6 +218,51 @@
           </ul>
         </div>
       </section>
+      <section class="section choose page__choose">
+        <div class="container">
+          <div class="choose__body">
+            <h2 class="choose__title">Why choose us?</h2>
+            <ul class="choose__list">
+              <li class="choose-item">
+                <div class="choose-item__icon">
+                  <svg width="39px" height="30px">
+                    <use href="./assets/icons.svg#performance" />
+                  </svg>
+                </div>
+                <h4 class="choose-item__title">Performance</h4>
+                <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
+              </li>
+              <li class="choose-item">
+                <div class="choose-item__icon">
+                  <svg width="22.5px" height="30px">
+                    <use href="./assets/icons.svg#entrepreneurship" />
+                  </svg>
+                </div>
+                <h4 class="choose-item__title">Entrepreneurship</h4>
+                <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
+              </li>
+              <li class="choose-item">
+                <div class="choose-item__icon">
+                  <svg width="21.8px" height="26.5px">
+                    <use href="./assets/icons.svg#authenticity" />
+                  </svg>
+                </div>
+                <h4 class="choose-item__title">Authenticity</h4>
+                <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
+              </li>
+              <li class="choose-item">
+                <div class="choose-item__icon">
+                  <svg width="36.5px" height="30px">
+                    <use href="./assets/icons.svg#kindness" />
+                  </svg>
+                </div>
+                <h4 class="choose-item__title">Kindness</h4>
+                <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./index.js"></script>
   </body>
