--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header class="header">
       <div class="container">
         <div class="header__body">
-          <div class="header__logo">
+          <div class="logo">
             <svg width="30px" height="30px">
               <title>CutSpace</title>
               <use href="./assets/icons.svg#logo" />
             </svg>
-            <span class="header__title">CutSpace</span>
+            <span class="logo__title">CutSpace</span>
           </div>
           <nav class="header__nav">
             <ul class="header__list">
@@ -385,6 +385,102 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__body">
+          <div class="footer__about">
+            <div class="logo footer__logo">
+              <svg width="30px" height="30px">
+                <title>CutSpace</title>
+                <use href="./assets/icons.svg#logo" />
+              </svg>
+              <span class="logo__title">CutSpace</span>
+            </div>
+            <p>Quae fuerit causa, nollem me ab illo inventore veritatis et.</p>
+            <ul class="footer__social">
+              <li>
+                <a href="#!" class="footer__icon">
+                  <svg width="20px" height="20px">
+                    <use href="./assets/icons.svg#facebook" />
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" class="footer__icon">
+                  <svg width="24.5px" height="20px">
+                    <use href="./assets/icons.svg#twitter" />
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" class="footer__icon">
+                  <svg width="28.5px" height="20px">
+                    <use href="./assets/icons.svg#youtube" />
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#!" class="footer__icon">
+                  <svg width="20.9px" height="20px">
+                    <use href="./assets/icons.svg#linkedin" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <ul class="footer__list">
+            <li class="footer-unit">
+              <h5 class="footer-unit__title">Privacy</h5>
+              <ul class="footer-unit__list">
+                <li class="footer-unit__item">
+                  <a href="#!">Si sine causa</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Quae fuerit causa</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Certe, inquam</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Torquatos nostros?</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer-unit">
+              <h5 class="footer-unit__title">Legal</h5>
+              <ul class="footer-unit__list">
+                <li class="footer-unit__item">
+                  <a href="#!">Ut placet, inquam</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Certe, inquam</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Et quidem rerum</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">At vero eos et</a>
+                </li>
+              </ul>
+            </li>
+            <li class="footer-unit">
+              <h5 class="footer-unit__title">Contact</h5>
+              <ul class="footer-unit__list">
+                <li class="footer-unit__item">
+                  <a href="#!">Primum igitur</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Certe, inquam</a>
+                </li>
+                <li class="footer-unit__item">
+                  <a href="#!">Quae fuerit causa</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
