Файл со стилями внешней геометрии вынесен в layout

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
       </div>
     </header>
-    <main class="page">
-      <section class="intro page__intro">
+    <main class="main">
+      <section class="intro main__intro">
         <div class="container">
           <div class="intro__body">
             <div class="intro__content">
@@ -69,7 +69,7 @@
           </div>
         </div>
       </section>
-      <div class="partners page__partners">
+      <div class="partners main__partners">
         <div class="container">
           <ul class="partners__list">
             <li>
@@ -95,7 +95,7 @@
           </ul>
         </div>
       </div>
-      <section class="provide page__provide">
+      <section class="provide main__provide">
         <div class="container">
           <div class="provide__body">
             <div class="provide__gallery">
@@ -160,7 +160,7 @@
           </div>
         </div>
       </section>
-      <section class="using page__using">
+      <section class="using main__using">
         <div class="container">
           <div class="using__body">
             <figure class="using__picture">
@@ -187,7 +187,7 @@
           </div>
         </div>
       </section>
-      <section class="serve page__serve">
+      <section class="serve main__serve">
         <div class="container">
           <header class="serve__header">
             <h2 class="serve__title">Who do we serve?</h2>
@@ -217,7 +217,7 @@
           </ul>
         </div>
       </section>
-      <section class="section choose page__choose">
+      <section class="section choose main__choose">
         <div class="container">
           <h2 class="choose__title">Why choose us?</h2>
           <ul class="choose__list">
@@ -260,7 +260,7 @@
           </ul>
         </div>
       </section>
-      <section class="words page__words">
+      <section class="words main__words">
         <div class="container container--wide">
           <div class="words__body">
             <header class="words__header">
@@ -365,7 +365,7 @@
           </div>
         </div>
       </section>
-      <section class="experience page__experience">
+      <section class="experience main__experience">
         <div class="container">
           <div class="experience__body">
             <div class="experience__content">
