Рефакторинг: исправлены ошибки, убраны классы

--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
             </svg>
             <span class="logo__title">CutSpace</span>
           </div>
-          <nav class="header__nav">
+          <nav>
             <ul class="header__list">
-              <li><a href="#!" class="header__link">Home</a></li>
-              <li><a href="#!" class="header__link header__link--active">About us</a></li>
-              <li><a href="#!" class="header__link">Find space</a></li>
-              <li><a href="#!" class="header__link">Share space</a></li>
-              <li><a href="#!" class="header__link">Promote space</a></li>
+              <li>
+                <a href="#!" class="header__link">Home</a>
+              </li>
+              <li>
+                <a href="#!" class="header__link header__link--active">About us</a>
+              </li>
+              <li>
+                <a href="#!" class="header__link">Find space</a>
+              </li>
+              <li>
+                <a href="#!" class="header__link">Share space</a>
+              </li>
+              <li>
+                <a href="#!" class="header__link">Promote space</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -41,11 +51,9 @@
               </p>
               <form class="intro-form">
                 <label class="intro-form__label">
-                  <span class="intro-form__icon">
-                    <svg width="24px" height="19px">
-                      <use href="./assets/icons.svg#mail" />
-                    </svg>
-                  </span>
+                  <svg width="24px" height="19px">
+                    <use href="./assets/icons.svg#mail" />
+                  </svg>
                   <input
                     type="email"
                     name="email"
@@ -197,7 +205,7 @@
             <li class="serve-card">
               <div>
                 <svg width="70px" height="70px" class="serve-card__icon">
-                  <use href="./assets/icons.svg#buyer"></use>
+                  <use href="./assets/icons.svg#buyer" />
                 </svg>
                 <h3 class="serve-card__title">Buyers</h3>
                 <p>Torquem detraxit hosti et quidem se texit, ne ad eam.</p>
@@ -207,7 +215,7 @@
             <li class="serve-card">
               <div>
                 <svg width="70px" height="70px" class="serve-card__icon">
-                  <use href="./assets/icons.svg#seller"></use>
+                  <use href="./assets/icons.svg#seller" />
                 </svg>
                 <h3 class="serve-card__title">Seller</h3>
                 <p>Torquem detraxit hosti et quidem se texit, ne ad eam.</p>
@@ -271,8 +279,8 @@
             </header>
             <div class="words__row">
               <ul class="words__list">
-                <li class="words-item">
-                  <a href="#!" class="words-item__body">
+                <li>
+                  <a href="#!" class="words-item">
                     <div class="words-item__media">
                       <figure class="words-item__picture">
                         <img
@@ -299,8 +307,8 @@
                     </div>
                   </a>
                 </li>
-                <li class="words-item">
-                  <a href="#!" class="words-item__body">
+                <li>
+                  <a href="#!" class="words-item">
                     <div class="words-item__media">
                       <figure class="words-item__picture">
                         <img
@@ -327,8 +335,8 @@
                     </div>
                   </a>
                 </li>
-                <li class="words-item">
-                  <a href="#!" class="words-item__body">
+                <li>
+                  <a href="#!" class="words-item">
                     <div class="words-item__media">
                       <figure class="words-item__picture">
                         <img
@@ -358,7 +366,7 @@
               </ul>
               <span class="words__icon">
                 <svg width="80px" height="80px">
-                  <use href="/assets/icons.svg#circle" />
+                  <use href="./assets/icons.svg#circle" />
                 </svg>
               </span>
             </div>
@@ -388,7 +396,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__body">
-          <div class="footer__about">
+          <div>
             <div class="logo footer__logo">
               <svg width="30px" height="30px">
                 <title>CutSpace</title>
