--- a/index.html
+++ b/index.html
@@ -25,21 +25,27 @@
             </svg>
             <span class="logo__title">CutSpace</span>
           </div>
-          <nav>
+          <input type="checkbox" id="menu" class="header__checkbox" />
+          <label for="menu" class="header__toggler">
+            <span class="header__line header__line--1"></span>
+            <span class="header__line header__line--2"></span>
+            <span class="header__line header__line--3"></span>
+          </label>
+          <nav class="header__nav">
             <ul class="header__list">
-              <li>
+              <li class="header__item">
                 <a href="#!" class="header__link">Home</a>
               </li>
-              <li>
+              <li class="header__item">
                 <a href="#!" class="header__link header__link--active">About us</a>
               </li>
-              <li>
+              <li class="header__item">
                 <a href="#!" class="header__link">Find space</a>
               </li>
-              <li>
+              <li class="header__item">
                 <a href="#!" class="header__link">Share space</a>
               </li>
-              <li>
+              <li class="header__item">
                 <a href="#!" class="header__link">Promote space</a>
               </li>
             </ul>
