--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
       <div class="partners main__partners">
         <div class="container">
           <ul class="partners__list">
-            <li>
+            <li class="partners__item">
               <svg width="217px" height="42px">
                 <use href="./assets/icons.svg#partner_1" />
               </svg>
             </li>
-            <li>
+            <li class="partners__item">
               <svg width="190px" height="34px">
                 <use href="./assets/icons.svg#partner_2" />
               </svg>
             </li>
-            <li>
+            <li class="partners__item">
               <svg width="230px" height="42px">
                 <use href="./assets/icons.svg#partner_3" />
               </svg>
             </li>
-            <li>
+            <li class="partners__item">
               <svg width="188px" height="38px">
                 <use href="./assets/icons.svg#partner_4" />
               </svg>
