Адаптирован блок provide

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
       <section class="provide main__provide">
         <div class="container">
           <div class="provide__body">
+            <h2 class="provide__title">We provide best space for you!</h2>
+
             <div class="provide__gallery">
-              <div class="provide__card">
+              <div class="provide__card provide__card--half">
                 <figure class="provide__picture">
                   <img
                     src="./assets/images/content/provide-01.jpg"
@@ -170,7 +172,6 @@
               </div>
             </div>
             <div class="provide__content">
-              <h2 class="provide__title">We provide best space for you!</h2>
               <p>
                 Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex ea quid est et via procedat oratio
                 quaerimus.
