Адаптирован блок using

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 src="./assets/images/content/using.jpg"
                 srcset="./assets/images/content/using@2x.jpg 2x"
                 alt="Using image"
+                class="using__image"
               />
             </figure>
             <div class="using__content">
@@ -197,9 +198,9 @@
               <p>Quid ex eo ortum, tam inportuno tamque crudeli; sin, ut aliquid ex</p>
 
               <div class="using__action">
-                <a href="#!" class="button button--accented">Contact Us</a>
-                <button class="button using__play-button">
-                  <svg width="12px" height="12px" class="using__play-icon">
+                <a href="#!" class="button button--accented using__button">Contact Us</a>
+                <button class="button using__button using__button--play">
+                  <svg width="12px" height="12px" class="using__icon">
                     <use href="./assets/icons.svg#play" />
                   </svg>
                   <span>Watch now</span>
