Адаптирован блок serve

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <p>Every buyer and seller of tech and services in the world.</p>
           </header>
           <ul class="serve__list">
-            <li class="serve-card">
+            <li class="serve-card serve-card--orange serve__item">
               <div>
                 <svg width="70px" height="70px" class="serve-card__icon">
                   <use href="./assets/icons.svg#buyer" />
@@ -227,7 +227,7 @@
               </div>
               <a href="#!" class="button serve-card__button">Get Started</a>
             </li>
-            <li class="serve-card">
+            <li class="serve-card serve-card--white serve__item">
               <div>
                 <svg width="70px" height="70px" class="serve-card__icon">
                   <use href="./assets/icons.svg#seller" />
