Адаптирован блок choose

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="container">
           <h2 class="choose__title">Why choose us?</h2>
           <ul class="choose__list">
-            <li class="choose-item">
+            <li class="choose-item choose__item">
               <div class="choose-item__icon">
                 <svg width="39px" height="30px" class="choose-item__svg">
                   <use href="./assets/icons.svg#performance" />
@@ -253,7 +253,7 @@
               <h4 class="choose-item__title">Performance</h4>
               <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
             </li>
-            <li class="choose-item">
+            <li class="choose-item choose__item">
               <div class="choose-item__icon">
                 <svg width="22.5px" height="30px" class="choose-item__svg">
                   <use href="./assets/icons.svg#entrepreneurship" />
@@ -262,7 +262,7 @@
               <h4 class="choose-item__title">Entrepreneurship</h4>
               <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
             </li>
-            <li class="choose-item">
+            <li class="choose-item choose__item">
               <div class="choose-item__icon">
                 <svg width="21.8px" height="26.5px" class="choose-item__svg">
                   <use href="./assets/icons.svg#authenticity" />
@@ -271,7 +271,7 @@
               <h4 class="choose-item__title">Authenticity</h4>
               <p>Torquem detraxit hosti et quidem se texit, ne ad.</p>
             </li>
-            <li class="choose-item">
+            <li class="choose-item choose__item">
               <div class="choose-item__icon">
                 <svg width="36.5px" height="30px" class="choose-item__svg">
                   <use href="./assets/icons.svg#kindness" />
